# PION

./: .dockerignore  .gitignore  Dockerfile  README.md  library.properties  meson.build  package.json  server.js
.github/workflows/: build.yml
docs/: INSTALL.md  dnsmasq.conf  expsetup.md  fwsize.md  hostapd.conf  netplan-ap.yaml  netplan.yml  protocol.md  size.md  size.sh  wpa_supplicant-auth.conf
examples/: .gitignore
examples/baseline/: baseline.ino  sample.config.hpp
examples/device/: app.cpp  app.hpp  device.ino  direct.cpp  infra.cpp  password.cpp  sample.config.hpp  sample.secrets.hpp
examples/unittest/: unittest.ino
extras/: firmware-sizes.sh  install-programs.sh
extras/ca/: .gitignore  .npmrc  package.json  postinstall.js  postinstall.sh  sample.env  server.js  tsconfig.json
extras/ca/src/: challenge.js  env.js  main.js
extras/exp/: Pipfile  device_conn.py  package.json  postinstall.js  sample.env  tsconfig.json  xo.config.cjs
extras/exp/src/: authenticator.ts  ble-bridge.ts  device.ts  direct-connection.ts  dumpcap.ts  env.ts  main.ts  packet.ts  run.ts  wifi-client.ts  wifi-station.ts
extras/nfd/: Dockerfile  connect.sh  start.sh
extras/pcapparse/: go.mod  go.sum
extras/pcapparse/parser/: matcher.go  parser.go
mk/: format-code.sh  update-list.sh  update-vendor.sh
programs/: install.sh  meson.build
programs/authenticator/: README.md  main.cpp
src/: meson.build  ndn-onboarding.h  pion.h
src/ndnob/: common.hpp  log.hpp
src/ndnob/pake/: an.hpp  authenticator.cpp  (+5 more)
src/pion/: common.hpp  log.hpp
subprojects/: NDNph.wrap
(+14 files in other folders)
